--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,3 +8,9 @@
     background-position: center;
     background-size: cover;
 }
+
+.shopping {
+    background-image: url(../images/shop-bg.png);
+    background-position: center;
+    background-size: cover;
+}
